# extract-frame

./: .gitignore  README.md  main.py  pyproject.toml
docs/: SPEC.md
ffmpeg_gui/: __init__.py  app.py  core.py
tests/: test_app_helpers.py  test_app_window.py  test_core.py
